force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <label>Voucher</label>
    <nameField>
        <label>Voucher Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>