force-app/main/default/objects/Voucher__c/fields/Applies_to_Membership__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to Membership</label>
    <type>Checkbox</type>
</CustomField>