force-app/main/default/objects/Voucher__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <formula>IF(
AND(ISBLANK(Used_By__c),Valid_From__c &lt;= TODAY(), Expiry_Date__c &gt; TODAY())
,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>