force-app/main/default/objects/Voucher__c/fields/Used_By__c.field-meta.xml
<CustomField>
    <fullName>Used_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Used By</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>