force-app/main/default/objects/Voucher__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RAC</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Manoeuvring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>